Fixed another spacing issue

--- a/src/styles/services.module.css
+++ b/src/styles/services.module.css
@@ -85,7 +85,7 @@
   }
 
   .textContent {
-    font-size: 2em; /* Adjust font size for smaller screens */
+    font-size: 1.5rem; /* Adjust font size for smaller screens */
   }
 
   .imageRight {
